# reader

./: .gitignore  Cargo.toml  Dockerfile  README.md  script_option.md  test_script.yml
prototype/glitch-typer/: Cargo.toml
prototype/glitch-typer/src/: main.rs
src/: config.rs  docker.rs  keys.rs  main.rs  parser.rs  tts.rs
ui/: main.slint
