[package]
name = "reader"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rodio = { version = "0.19", default-features = false, features = ["mp3"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
dirs = "5"

[build-dependencies]
slint-build = "1"
